--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "type": "module", 
+  "type": "module",
   "main": "server.js",
   "dependencies": {
     "bcryptjs": "^3.0.2",
@@ -10,8 +10,8 @@
     "dotenv": "^17.1.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.2"
-
+    "mongoose": "^8.16.2",
+    "socket.io": "^4.8.1"
   },
   "scripts": {
     "start": "node server.js"
